Fix bug where form overflows container

--- a/src/components/UserSettings/UserSettings.scss
+++ b/src/components/UserSettings/UserSettings.scss
@@ -126,6 +126,9 @@
       background-color: #000;
       border: 1px solid #fff;
     }
+    &--select {
+      width: 100%;
+    }
     &--audio {
       overflow: hidden;
       width: 0;
